# Disasteroids

./: Makefile  Makefile.am  Makefile.in  Makefile.mine  README.md  README_Autotools  config.status  configure  configure.ac
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
src/: app.h  arena.c  arena.h  asteroids.c  ball.c  ball.h  bonus.c  bonus.h  bounds.c  bounds.h  config.c  config.h  intro.c  intro.h  levels.c  levels.h  menu.c  menu.h  resourcefactory.c  resourcefactory.h  resources.c  resources.h  rock.c  rock.h  save.c  save.h  scores.c  scores.h  ship.c  ship.h  sparkle.h  text.c  text.h  vector.c  vector.h
src/.deps/: arena.Po  asteroids.Po  ball.Po  barkanoid.Po  bat.Po  bonus.Po  bounds.Po  cat.Po  config.Po  intro.Po  levels.Po  menu.Po  resourcefactory.Po  resources.Po  rock.Po  save.Po  scores.Po  ship.Po  text.Po  vector.Po
win-installer/: barkout.nsi  barkout.rc
